--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "scripts": {
         "start:vite": "vite",
         "build:vite": "tsc && vite build",
+        "build:vite:without:check": "vite build",
         "lint:ts": "eslint \"**/*.{ts,tsx}\"",
         "lint:ts:fix": "eslint --fix \"**/*.{ts,tsx}\"",
         "lint:scss": "stylelint \"**/*.scss\"",
