--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
-     "@/*": ["src/*"],
+     "@/*": ["resources/src/*"],
     },
 
     /* Linting */
@@ -26,7 +26,7 @@
     "noFallthroughCasesInSwitch": true,
 
   },
-  "include": ["src"],
+  "include": ["resources/src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
 
