--- a/resources/main/package.json
+++ b/resources/main/package.json
@@ -53,12 +53,15 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.1.0",
+        "@splidejs/react-splide": "^0.7.12",
         "axios": "^1.4.0",
+        "query-string": "^9.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.0",
         "react-responsive": "^9.0.2",
         "react-router-dom": "^6.12.0",
-        "redux": "^5.0.1"
+        "redux": "^5.0.1",
+        "swiper": "^11.0.7"
     }
 }
