--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
-  "dependencies": {
-    "react-transition-group": "^4.4.5"
-  },
-  "devDependencies": {
-    "@types/react-transition-group": "^4.4.10"
-  }
+    "dependencies": {
+        "react-transition-group": "^4.4.5"
+    },
+    "devDependencies": {
+        "@tailwindcss/forms": "^0.5.2",
+        "@tailwindcss/typography": "^0.5.4",
+        "@types/react-transition-group": "^4.4.10",
+        "autoprefixer": "^10.4.7",
+        "postcss": "^8.4.14",
+        "postcss-nesting": "^12.0.1",
+        "tailwindcss": "^3.1"
+    }
 }
