--- a/resources/main/package.json
+++ b/resources/main/package.json
@@ -58,11 +58,12 @@
         "query-string": "^9.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.51.2",
         "react-redux": "^9.1.0",
         "react-responsive": "^9.0.2",
         "react-router-dom": "^6.12.0",
+        "react-transition-group": "^4.4.2",
         "redux": "^5.0.1",
-        "swiper": "^11.0.7",
-        "react-transition-group": "^4.4.2"
+        "swiper": "^11.0.7"
     }
 }
