--- a/public/main/manifest.json
+++ b/public/main/manifest.json
@@ -1,10 +1,10 @@
 {
   "src/main.tsx": {
-    "file": "assets/main-CDGJbhx_.js",
+    "file": "assets/main-CZ2n8xnB.js",
     "src": "src/main.tsx",
     "isEntry": true,
     "css": [
-      "assets/main-DBpHYsA1.css"
+      "assets/main-BhZQ9tr6.css"
     ]
   }
 }
