--- a/resources/main/package.json
+++ b/resources/main/package.json
@@ -57,6 +57,7 @@
         "@reduxjs/toolkit": "^2.1.0",
         "@splidejs/react-splide": "^0.7.12",
         "axios": "^1.4.0",
+        "clsx": "^2.1.1",
         "query-string": "^9.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
