add response and email

--- a/.env
+++ b/.env
@@ -33,8 +33,7 @@ MAIL_MAILER=smtp
 MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=c825f69a7d1fb0
-MAIL_PASSWORD=dd796794e71df0
-MAIL_ENCRYPTION=tls
+MAIL_PASSWORD=********1df0
 MAIL_FROM_ADDRESS="bogdanpanasuk437@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
