--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ DB_PASSWORD=root
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -31,11 +31,9 @@ REDIS_PORT=6379
 
 MAIL_MAILER=smtp
 MAIL_HOST=sandbox.smtp.mailtrap.io
-MAIL_PORT=2525
+MAIL_PORT=587
 MAIL_USERNAME=c825f69a7d1fb0
-MAIL_PASSWORD=********1df0
-MAIL_FROM_ADDRESS="bogdanpanasuk437@gmail.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_PASSWORD=dd796794e71df0
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
