--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 /.phpunit.cache
 /node_modules
 /resources/main/node_modules
-/resources/control/node_modules
 .env.backup
 .env.production
+.env
 .phpunit.result.cache
 Homestead.json
 Homestead.yaml
