--- a/resources/main/package.json
+++ b/resources/main/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "production-project",
+    "name": "frontend-lntu-gurt",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
