--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=gurt
 APP_ENV=local
 APP_KEY=base64:o1JjnfL/Dsec6+YaZp/Tt9jd3dy0hZxc26LnPvPNYb8=
 APP_DEBUG=true
-APP_URL=http://www.lntu.local
+APP_URL=http://lntu-gurt-prod.eu-north-1.elasticbeanstalk.com
 
 
 LOG_CHANNEL=stack
