--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=gurt
 APP_ENV=local
 APP_KEY=base64:o1JjnfL/Dsec6+YaZp/Tt9jd3dy0hZxc26LnPvPNYb8=
 APP_DEBUG=true
-APP_URL=https://www.lntu.local
+APP_URL=https://lntu-gurt.onrender.com/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
