--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ APP_NAME=gurt
 APP_ENV=production
 APP_KEY=base64:o1JjnfL/Dsec6+YaZp/Tt9jd3dy0hZxc26LnPvPNYb8=
 APP_DEBUG=true
-APP_URL=https://www.lntu.local
-ASSET_URL=https://www.lntu.local/public
+APP_URL=http://www.lntu.local
+ASSET_URL=http://www.lntu.local/public
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
