--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ APP_NAME=gurt
 APP_ENV=production
 APP_KEY=base64:o1JjnfL/Dsec6+YaZp/Tt9jd3dy0hZxc26LnPvPNYb8=
 APP_DEBUG=true
-APP_URL=http://localhost
-ASSET_URL=http://localhost/public
+APP_URL=https://localhost
+ASSET_URL=https://localhost/public
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
