--- a/conf/nginx/nginx-site.conf
+++ b/conf/nginx/nginx-site.conf
@@ -7,7 +7,15 @@ server {
 
   root /var/www/html/public;
   index index.html index.htm index.php;
-
+  
+    location /public {
+        root /var/www/html;
+        add_header Access-Control-Allow-Origin *;
+        add_header Cache-control public;
+        expires 24h;
+        error_page 404 = @static;
+        log_not_found off;
+    }   
   # Disable sendfile as per https://docs.vagrantup.com/v2/synced-folders/virtualbox.html
   sendfile off;
 
@@ -48,7 +56,6 @@ server {
     fastcgi_param SCRIPT_NAME $fastcgi_script_name;
     include fastcgi_params;
   }
-
   # deny access to . files
   location ~ /\. {
     log_not_found off;
