--- a/public/main/manifest.json
+++ b/public/main/manifest.json
@@ -1,10 +1,10 @@
 {
   "src/main.tsx": {
-    "file": "assets/main-_w_YRrYT.js",
+    "file": "assets/main-Bag0hHbq.js",
     "src": "src/main.tsx",
     "isEntry": true,
     "css": [
-      "assets/main-BvfUR5tv.css"
+      "assets/main-D2O8YkxG.css"
     ],
     "assets": [
       "assets/arrow-BRU2N8l5.svg"
