--- a/.env
+++ b/.env
@@ -1,20 +1,19 @@
 APP_NAME=gurt
-APP_ENV=production
+APP_ENV=local
 APP_KEY=base64:o1JjnfL/Dsec6+YaZp/Tt9jd3dy0hZxc26LnPvPNYb8=
 APP_DEBUG=true
-APP_URL=https://lntu-gurt.onrender.com
+APP_URL=http://www.lntu.local
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
-DB_HOST=localhost
-DB_PORT=5432
-DATABASE_URL=postgres://lntu:MNRX0vMSQCxvSlw0lh9VyEJskZ4iNgEG@dpg-cpbo8prtg9os73connf0-a/lntu
-DB_DATABASE=lntu
-DB_USERNAME=lntu
-DB_PASSWORD=MNRX0vMSQCxvSlw0lh9VyEJskZ4iNgEG
+DB_CONNECTION=mysql
+DB_HOST=mysql
+DB_PORT=3306
+DB_DATABASE=prod_lntu_gurt
+DB_USERNAME=root
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
