--- a/conf/nginx/nginx-site.conf
+++ b/conf/nginx/nginx-site.conf
@@ -36,6 +36,8 @@ server {
 
   error_page 404 /index.php;
 
+  error_page  405     =200 $uri;
+
   location ~* \.(jpg|jpeg|gif|png|css|js|ico|webp|tiff|ttf|svg)$ {
     expires 5d;
   }
