--- a/conf/nginx/nginx-site.conf
+++ b/conf/nginx/nginx-site.conf
@@ -1,66 +1,44 @@
 server {
-  # Render provisions and terminates SSL
-  listen 80;
+    listen 80;
+    listen 443;
+    server_name _;
+    root "/var/www/html/public";
 
-  # Make site accessible from http://localhost/
-  server_name _;
+    index index.html index.htm index.php;
 
-  root /var/www/html/public;
-  index index.html index.htm index.php;
+    charset utf-8;
 
-  # Disable sendfile as per https://docs.vagrantup.com/v2/synced-folders/virtualbox.html
-  sendfile off;
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+        
+    }
 
-  # Add stdout logging
-  error_log /dev/stdout info;
-  access_log /dev/stdout;
+    location = /favicon.ico { access_log off; log_not_found off; }
+    location = /robots.txt  { access_log off; log_not_found off; }
 
-  # block access to sensitive information about git
-  location /.git {
-    deny all;
-    return 403;
-  }
+    access_log /dev/stdout;
+    error_log /dev/stdout info;
 
-  add_header X-Frame-Options "SAMEORIGIN";
-  add_header X-XSS-Protection "1; mode=block";
-  add_header X-Content-Type-Options "nosniff";
+    sendfile off;
 
-  charset utf-8;
+    location ~ \.php$ {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass php-upstream;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        
 
-  location / {
-      try_files $uri $uri/ /index.php?$query_string;
-  }
+        fastcgi_intercept_errors off;
+        fastcgi_buffer_size 16k;
+        fastcgi_buffers 4 16k;
+        fastcgi_connect_timeout 300;
+        fastcgi_send_timeout 300;
+        fastcgi_read_timeout 300;
+    }
 
-  location ^~ /filament {
-    try_files $uri $uri/ /index.php?$query_string;
-  }
+    location ~ /\.ht {
+        deny all;
+    }
 
-  location = /favicon.ico { access_log off; log_not_found off; }
-  location = /robots.txt  { access_log off; log_not_found off; }
-
-  error_page 404 /index.php;
-  
-
-  location ~* \.(jpg|jpeg|gif|png|css|js|ico|webp|tiff|ttf|svg)$ {
-    expires 5d;
-  }
-
-  location ~ \.php$ {
-    fastcgi_split_path_info ^(.+\.php)(/.+)$;
-    fastcgi_pass unix:/var/run/php-fpm.sock;
-    fastcgi_index index.php;
-    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    fastcgi_param SCRIPT_NAME $fastcgi_script_name;
-    include fastcgi_params;
-  }
-
-  # deny access to . files
-  location ~ /\. {
-    log_not_found off;
-    deny all;
-  }
-
-  location ~ /\.(?!well-known).* {
-    deny all;
-  }
 }
