--- a/conf/nginx/nginx-site.conf
+++ b/conf/nginx/nginx-site.conf
@@ -23,7 +23,7 @@ server {
 
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php-upstream;
+        fastcgi_pass unix:/var/run/php-fpm.sock;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
