--- a/conf/nginx/nginx-site.conf
+++ b/conf/nginx/nginx-site.conf
@@ -41,4 +41,11 @@ server {
         deny all;
     }
 
+    location ~* \.(jpg|jpeg|gif|png|webp|svg|woff|woff2|ttf|css|js|ico|xml)$ {
+       try_files $uri /index.php?$query_string;
+       access_log        off;
+       log_not_found     off;
+       expires           14d;
+}
+
 }
