--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=base64:o1JjnfL/Dsec6+YaZp/Tt9jd3dy0hZxc26LnPvPNYb8=
 APP_DEBUG=true
 APP_URL=http://www.lntu.local
+DEPLOY_APP_URL=https://lntu-gurt.onrender.com
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
