--- a/public/main/manifest.json
+++ b/public/main/manifest.json
@@ -1,10 +1,10 @@
 {
   "src/main.tsx": {
-    "file": "assets/main-BupGO0qN.js",
+    "file": "assets/main-Ck6bTlJw.js",
     "src": "src/main.tsx",
     "isEntry": true,
     "css": [
-      "assets/main-BKEwmlZZ.css"
+      "assets/main-AK8libhG.css"
     ],
     "assets": [
       "assets/arrow-BRU2N8l5.svg"
