Created build, changed select size

--- a/public/main/manifest.json
+++ b/public/main/manifest.json
@@ -1,10 +1,10 @@
 {
   "src/main.tsx": {
-    "file": "assets/main-B7NnKBbN.js",
+    "file": "assets/main-DfGAz2b4.js",
     "src": "src/main.tsx",
     "isEntry": true,
     "css": [
-      "assets/main-BRDJO0tJ.css"
+      "assets/main-9PwMvXhu.css"
     ],
     "assets": [
       "assets/arrow-BRU2N8l5.svg"
