--- a/conf/nginx/nginx-site.conf
+++ b/conf/nginx/nginx-site.conf
@@ -10,7 +10,7 @@ server {
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
-        
+
     }
 
     location = /favicon.ico { access_log off; log_not_found off; }
@@ -27,7 +27,7 @@ server {
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        
+
 
         fastcgi_intercept_errors off;
         fastcgi_buffer_size 16k;
@@ -40,7 +40,9 @@ server {
     location ~ /\.ht {
         deny all;
     }
-
+   location ^~ /livewire {
+        try_files $uri $uri/ /index.php?$query_string;
+   }
     location ~* \.(jpg|jpeg|gif|png|webp|svg|woff|woff2|ttf|css|js|ico|xml)$ {
        try_files $uri /index.php?$query_string;
        access_log        off;
