--- a/public/main/manifest.json
+++ b/public/main/manifest.json
@@ -1,10 +1,10 @@
 {
   "src/main.tsx": {
-    "file": "assets/main-D7XDeAZ_.js",
+    "file": "assets/main-DDSpSITC.js",
     "src": "src/main.tsx",
     "isEntry": true,
     "css": [
-      "assets/main-oCLU1RWD.css"
+      "assets/main-BAJQqeh-.css"
     ],
     "assets": [
       "assets/arrow-BRU2N8l5.svg"
