Fix breadrumbs, created build

--- a/public/main/manifest.json
+++ b/public/main/manifest.json
@@ -1,6 +1,6 @@
 {
   "src/main.tsx": {
-    "file": "assets/main-DDSpSITC.js",
+    "file": "assets/main-mL7lQgcq.js",
     "src": "src/main.tsx",
     "isEntry": true,
     "css": [
