Created draggble aside, created build

--- a/public/main/manifest.json
+++ b/public/main/manifest.json
@@ -1,10 +1,10 @@
 {
   "src/main.tsx": {
-    "file": "assets/main-mL7lQgcq.js",
+    "file": "assets/main-Bhc4JCnw.js",
     "src": "src/main.tsx",
     "isEntry": true,
     "css": [
-      "assets/main-BAJQqeh-.css"
+      "assets/main-BbGNCIaT.css"
     ],
     "assets": [
       "assets/arrow-BRU2N8l5.svg"
