Creating verify page, created build

--- a/public/main/manifest.json
+++ b/public/main/manifest.json
@@ -1,10 +1,10 @@
 {
   "src/main.tsx": {
-    "file": "assets/main-DPxiR1xI.js",
+    "file": "assets/main-fsrXj2rU.js",
     "src": "src/main.tsx",
     "isEntry": true,
     "css": [
-      "assets/main-BbGNCIaT.css"
+      "assets/main-J09S3efP.css"
     ],
     "assets": [
       "assets/arrow-BRU2N8l5.svg"
