--- a/public/main/manifest.json
+++ b/public/main/manifest.json
@@ -1,6 +1,6 @@
 {
   "src/main.tsx": {
-    "file": "assets/main-CqlzXlLi.js",
+    "file": "assets/main-DlXuOrUF.js",
     "src": "src/main.tsx",
     "isEntry": true,
     "css": [
