--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "sentry/sentry-laravel": "^4.5",
+        "spatie/laravel-google-cloud-storage": "^2.3",
         "tymon/jwt-auth": "^2.1"
     },
     "require-dev": {
