Created Field for search cities, added bundle analizer, created build

--- a/public/main/manifest.json
+++ b/public/main/manifest.json
@@ -1,10 +1,10 @@
 {
   "src/main.tsx": {
-    "file": "assets/main-DlXuOrUF.js",
+    "file": "assets/main-jJIq0wrt.js",
     "src": "src/main.tsx",
     "isEntry": true,
     "css": [
-      "assets/main-J09S3efP.css"
+      "assets/main-CurFIiBo.css"
     ],
     "assets": [
       "assets/arrow-BRU2N8l5.svg"
