--- a/resources/main/package.json
+++ b/resources/main/package.json
@@ -45,6 +45,7 @@
         "laravel-vite-plugin": "^1.0.0",
         "plop": "^4.0.1",
         "prettier": "^3.0.3",
+        "rollup-plugin-visualizer": "^5.12.0",
         "sass": "^1.63.2",
         "stylelint": "^15.7.0",
         "stylelint-config-recommended-scss": "^12.0.0",
@@ -55,7 +56,7 @@
         "vite-plugin-svgr": "^4.2.0"
     },
     "dependencies": {
-        "@headlessui/react": "^1.7.18",
+        "@headlessui/react": "^2.0.4",
         "@mantine/core": "^7.7.1",
         "@reduxjs/toolkit": "^2.1.0",
         "@splidejs/react-splide": "^0.7.12",
