--- a/public/main/manifest.json
+++ b/public/main/manifest.json
@@ -1,10 +1,10 @@
 {
   "src/main.tsx": {
-    "file": "assets/main-CXOZbJeF.js",
+    "file": "assets/main-CBbo_r26.js",
     "src": "src/main.tsx",
     "isEntry": true,
     "css": [
-      "assets/main-DToPbsZ7.css"
+      "assets/main-CIcmPGo6.css"
     ],
     "assets": [
       "assets/arrow-BRU2N8l5.svg"
