Fix bugs, created build

--- a/public/main/manifest.json
+++ b/public/main/manifest.json
@@ -1,10 +1,10 @@
 {
   "src/main.tsx": {
-    "file": "assets/main-D3xN7Lit.js",
+    "file": "assets/main-AB9qy_gm.js",
     "src": "src/main.tsx",
     "isEntry": true,
     "css": [
-      "assets/main-DcO4TWv5.css"
+      "assets/main-C_3ex18s.css"
     ],
     "assets": [
       "assets/arrow-BRU2N8l5.svg"
